--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@ body {
   font-size: solid;
   display: center;
   justify-content: center;
-  /* align-items: center; */
+  align-items: center;
   text-align: center;
   color: rgb(30, 60, 50);
 }
