complete export & import data to app.js, declared buttons & style

--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 body {
-  background-color: rgb(200, 186, 165);
+  background-color: rgb(196, 192, 244);
   font-size: solid;
   display: center;
   justify-content: center;
@@ -7,3 +7,23 @@ body {
   text-align: center;
   color: rgb(30, 60, 50);
 }
+
+#next-button {
+  display: flex;
+  font-size: 22px;
+  justify-content: center;
+  align-items: center
+
+}
+
+button {
+  background-color: rgb(202, 194, 170);
+  border: none;
+  font-size: 28px;
+  cursor: pointer;
+  border-radius: 13px;
+  margin: 10px;
+  padding: 8px 18px;
+  align-items: flex-end;
+}
+
