--- a/css/style.css
+++ b/css/style.css
@@ -1,15 +1,70 @@
+html {
+  box-sizing: border-box;
+}
+*,
+*::before,
+*::after {
+  box-sizing: inherit;
+}
+
+
 body {
-  background-color: #d2e5ea;
-/* background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='152' height='152' viewBox='0 0 152 152'%3E%3Cg fill-rule='evenodd'%3E%3Cg id='temple' fill='%23041513' fill-opacity='0.4'%3E%3Cpath d='M152 150v2H0v-2h28v-8H8v-20H0v-2h8V80h42v20h20v42H30v8h90v-8H80v-42h20V80h42v40h8V30h-8v40h-42V50H80V8h40V0h2v8h20v20h8V0h2v150zm-2 0v-28h-8v20h-20v8h28zM82 30v18h18V30H82zm20 18h20v20h18V30h-20V10H82v18h20v20zm0 2v18h18V50h-18zm20-22h18V10h-18v18zm-54 92v-18H50v18h18zm-20-18H28V82H10v38h20v20h38v-18H48v-20zm0-2V82H30v18h18zm-20 22H10v18h18v-18zm54 0v18h38v-20h20V82h-18v20h-20v20H82zm18-20H82v18h18v-18zm2-2h18V82h-18v18zm20 40v-18h18v18h-18zM30 0h-2v8H8v20H0v2h8v40h42V50h20V8H30V0zm20 48h18V30H50v18zm18-20H48v20H28v20H10V30h20V10h38v18zM30 50h18v18H30V50zm-2-40H10v18h18V10z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E"); */
-  /* background-color: rgb(46, 114, 105); */
-  display: center;
+  background-color: #71afbd;
+  --body-bg: #d3d5f2;
+  --header-bg: #007bbe;
+  --inverted-btn-text-color: #a67c7c;
+  --light-dark-btn-bg: #bcbfe3;
+  --waving-flag-btn-content: "Dark Mode";
+  align-items: center;
+  background-color: var(--body-bg);
+
+  display: flex;
+
+  flex-direction: column; 
+  margin: 0;
   justify-content: center;
   align-items: center;
   text-align: center;
-  color: rgba(239, 235, 241, 0.927);
+  color: rgba(103, 63, 123, 0.927);
   margin: 0px;
-
+  border-radius: 8px;
 }
+
+
+body.dark {
+  --body-bg: #1b1206;
+  /* --header-bg: #164262; */
+  --inverted-btn-text-color: #763a3a;
+  --light-dark-btn-bg: linear-gradient(to right top, #3e4153, #595b6b, #6f7181,
+    #868898, #1f2a5e, #acaebe, #bbbccd, #cacbdc, #d2d4e5, #dadced, #e3e5f6, #ebeeff);
+  --shin-bright-botton: "Light-Mode";
+  h1 {
+    color: #bdd8df;
+  }
+  background-color: var(--body-bg);
+}
+#dark-mode-light {
+  justify-content: center;
+  display: flex;
+  align-items: center;
+  font-size: 18px;
+  color: #e9eaf0;
+  background-color: #bdd8df;
+}
+
+
+#dark-mode-light {
+  background-color: var(--inverted-btn-text-color);
+  background-image: var(--light-dark-btn-bg);
+  
+}
+
+#dark-mode-light::after  {
+  background-color: var(--inverted-btn-text-color);
+  background-image: var(--light-dark-btn-bg);
+}
+
+
 
 h2 {
   font-family: "Rakkas", serif;
@@ -21,7 +76,7 @@ h2 {
 
 h1 {
   font-size: 18px;
-  color: rgb(30, 31, 32);
+  color: rgb(34, 26, 28);
 }
 
 nav {
@@ -30,11 +85,13 @@ nav {
   border-radius: none;
   justify-content: center;
   align-items: center;
-  background-color: #bdd8df;
+  background-color: #acb5ed;
   margin-top: 0px;
   border-top:0dvh;
 
 }
+
+
 button {
   background-color: rgb(227, 227, 200);
   border: 0px;
