--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,6 @@ body {
   flex-direction: column; 
   justify-content: center;
   text-align: center;
-  color: rgba(103, 63, 123, 0.927);
   margin: 0px;
   border-radius: 8px;
 }
@@ -64,7 +63,6 @@ body.dark {
 }
 
 
-
 h2 {
   font-family: "Rakkas", serif;
   font-weight: 100;
@@ -84,9 +82,10 @@ h2 {
   justify-content: center;
   align-items: center;
   cursor: pointer;
-  background-color: #99c8e2;
-
+  background-color: #b5bdc2;
+  
 }
+
 nav {
   display: flex;
   width: 100%;
@@ -114,7 +113,6 @@ button {
   /* display: flex; */
 
 }
-
 
 
 
