--- a/css/style.css
+++ b/css/style.css
@@ -124,6 +124,13 @@ button {
 
 }
 
+#track-score {
+  display: flex;
+  align-items: end;
+  justify-content: flex-start;
+  flex-flow: row;
+  margin-left: 30px;
+}
 
 
 
