--- a/css/style.css
+++ b/css/style.css
@@ -129,10 +129,13 @@ button {
   align-items: end;
   justify-content: flex-start;
   flex-flow: row;
-  margin-left: 30px;
+  margin-left: 10px;
 }
 
-
+.score{
+  font-style: italic;
+  
+}
 
 
 
