--- a/css/style.css
+++ b/css/style.css
@@ -62,7 +62,8 @@ h3 {
   cursor: pointer;
   background-color: #a8afb4;
   margin-top: 0px;
-  margin-left: 740px;
+  margin-bottom: 10px;
+  margin-left: 760px;
 }
 nav {
   display: flex;
@@ -116,8 +117,6 @@ button {
   background-color: #f7fff68d;
   margin-top: 10px;
   width: 860px;
-  height: 630px;
+  height: 680px;
   border-radius: 5px;
 }
-
-
