--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,3 @@
-html {
-  box-sizing: border-box;
-}
-*,
-*::before,
-*::after {
-  box-sizing: inherit;
-}
 body {
   background-color: #E8E9EB;
   --body-bg: #94d1ed;
@@ -18,7 +10,7 @@ body {
   margin: 0px;
   border-radius: 8px;
 }
-body.dark {
+body.flag {
   background-image: url("../assets/images/flagss.png");
   background-repeat: no-repeat;
   background-size: cover;
@@ -97,7 +89,7 @@ button {
   border-radius: 8px;
   margin: 10px;
   margin-top: 40px;
-  margin-bottom: 23px;
+  margin-bottom: 20px;
   padding: 8px 10px;
   align-items: center;
   justify-content: center;
@@ -119,6 +111,6 @@ button {
   background-color: #f7fff68d;
   margin-top: 10px;
   width: 860px;
-  height: 690px;
+  height: 680px;
   border-radius: 5px;
 }
