fix fag-mode button accessiblity & remove extra variables

--- a/css/style.css
+++ b/css/style.css
@@ -78,8 +78,8 @@ nav {
   margin-top: 10px;
   display: flex;
   justify-content:flex-end;
-  background-color: #e95d5d;
-  color: #ede9e7;
+  background-color: #f18886;
+  color: #070707;
 }
 .flag {
   margin-top: 15px;
